Add static manifest and icons, update vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/manifest.json", "destination": "/static/manifest.json" },
+    { "source": "/icon-192.png", "destination": "/static/icon-192.png" },
+    { "source": "/icon-512.png", "destination": "/static/icon-512.png" }
   ]
 }
